[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.5 patchlevel 5                                 ??? ??, 2013

Commands:
 * Added @moniker, to allow colored names. See 'help monikers' for more.
   Requested by Mikoto Misaka. Idea from [MUX]. [MG]

Hardcode:
 * A number of changes have been made to accomodate monikers. Notably, a lot
   of calls to the Name() macro now use the AName() macro. See the 
   HACKING.185 file for more info. [MG]
 * wild_match_case_r(), regexp_match_case_r(), pe_regs_set_rx_context()
   and pe_regs_set_rx_context_ansi() now take an extra argument, a PE_REGS*
   flag to determine how matching subpatterns are stored in pe_regs. [MG]

Fixes:
 * Commands which take multiple right-hand-side arguments could only have
   8191-length arguments, instead of the usual 8192. Reported by Jules. [MG]
 * It was possible to return non-printable characters from an SQL database,
   which could cause undefined weirdness. Reported by spork. [MG]

Minor changes:
 * strreplace() now works harder to keep existing ANSI intact, when you
   replace an un-ansi'd string into an ansi'd one. [MG]
 * colors(...,xterm256) can now return colors 0 to 15, to avoid confusion
   when converting xterm -> hex -> xterm. Reported by Trinsec. [MG]
 * Regexp $-commands can now used name captures. Suggested by Mercutio. [MG]
   
Functions:
 * delete(), replace() and insert() have been renamed to strdelete(), 
   lreplace() and linsert(), respectively, for clarity and conformity. The
   original names remain as aliases. [MG]

Version 1.8.5 patchlevel 4                                 Mar 17, 2013

Major changes:
 * The player_name_len @config option is now the maximum length of a player
   name, instead of the maximum length+1, because doing it that way was
   rather silly. You may wish to lower yours by 1 now to compensate.